// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in javascript (default) mode creates a edit page 1`] = `
"import EditPostCell from 'src/components/Post/EditPostCell'

const EditPostPage = ({ id }) => {
  return <EditPostCell id={id} />
}

export default EditPostPage
"
`;

exports[`in javascript (default) mode creates a form component 1`] = `
"import {
  Form,
  FormError,
  FieldError,
  Label,
  TextField,
  DatetimeLocalField,
  CheckboxField,
  NumberField,
  TextAreaField,
  Submit,
} from '@redwoodjs/forms'

const formatDatetime = (value) => {
  if (value) {
    return value.replace(/:\\\\d{2}\\\\.\\\\d{3}\\\\w/, '')
  }
}

const PostForm = (props) => {
  const onSubmit = (data) => {
    props.onSave(data, props?.post?.id)
  }

  return (
    <div className=\\"rw-form-wrapper\\">
      <Form onSubmit={onSubmit} error={props.error}>
        <FormError
          error={props.error}
          wrapperClassName=\\"rw-form-error-wrapper\\"
          titleClassName=\\"rw-form-error-title\\"
          listClassName=\\"rw-form-error-list\\"
        />

        <Label
          name=\\"title\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Title
        </Label>

        <TextField
          name=\\"title\\"
          defaultValue={props.post?.title}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
          validation={{ required: true }}
        />

        <FieldError name=\\"title\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"slug\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Slug
        </Label>

        <TextField
          name=\\"slug\\"
          defaultValue={props.post?.slug}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
          validation={{ required: true }}
        />

        <FieldError name=\\"slug\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"author\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Author
        </Label>

        <TextField
          name=\\"author\\"
          defaultValue={props.post?.author}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
          validation={{ required: true }}
        />

        <FieldError name=\\"author\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"body\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Body
        </Label>

        <TextField
          name=\\"body\\"
          defaultValue={props.post?.body}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
          validation={{ required: true }}
        />

        <FieldError name=\\"body\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"image\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Image
        </Label>

        <TextField
          name=\\"image\\"
          defaultValue={props.post?.image}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
        />

        <FieldError name=\\"image\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"postedAt\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Posted at
        </Label>

        <DatetimeLocalField
          name=\\"postedAt\\"
          defaultValue={formatDatetime(props.post?.postedAt)}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
        />

        <FieldError name=\\"postedAt\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"isPinned\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Is pinned
        </Label>

        <CheckboxField
          name=\\"isPinned\\"
          defaultChecked={props.post?.isPinned}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
        />

        <FieldError name=\\"isPinned\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"readTime\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Read time
        </Label>

        <TextField
          name=\\"readTime\\"
          defaultValue={props.post?.readTime}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
          validation={{ valueAsNumber: true, required: true }}
        />

        <FieldError name=\\"readTime\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"rating\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Rating
        </Label>

        <TextField
          name=\\"rating\\"
          defaultValue={props.post?.rating}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
          validation={{ valueAsNumber: true }}
        />

        <FieldError name=\\"rating\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"upvotes\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Upvotes
        </Label>

        <NumberField
          name=\\"upvotes\\"
          defaultValue={props.post?.upvotes}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
          validation={{ required: true }}
        />

        <FieldError name=\\"upvotes\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"metadata\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Metadata
        </Label>

        <TextAreaField
          name=\\"metadata\\"
          defaultValue={JSON.stringify(props.post?.metadata)}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
          validation={{ valueAsJSON: true, required: true }}
        />

        <FieldError name=\\"metadata\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"hugeNumber\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Huge number
        </Label>

        <TextField
          name=\\"hugeNumber\\"
          defaultValue={props.post?.hugeNumber}
          className=\\"rw-input\\"
          errorClassName=\\"rw-input rw-input-error\\"
          validation={{ required: true }}
        />

        <FieldError name=\\"hugeNumber\\" className=\\"rw-field-error\\" />

        <div className=\\"rw-button-group\\">
          <Submit disabled={props.loading} className=\\"rw-button rw-button-blue\\">
            Save
          </Submit>
        </div>
      </Form>
    </div>
  )
}

export default PostForm
"
`;

exports[`in javascript (default) mode creates a index page 1`] = `
"import PostsCell from 'src/components/Post/PostsCell'

const PostsPage = () => {
  return <PostsCell />
}

export default PostsPage
"
`;

exports[`in javascript (default) mode creates a layout 1`] = `
"import { Link, routes } from '@redwoodjs/router'
import { Toaster } from '@redwoodjs/web/toast'

const PostsLayout = ({ children }) => {
  return (
    <div className=\\"rw-scaffold\\">
      <Toaster toastOptions={{ className: 'rw-toast', duration: 6000 }} />
      <header className=\\"rw-header\\">
        <h1 className=\\"rw-heading rw-heading-primary\\">
          <Link to={routes.posts()} className=\\"rw-link\\">
            Posts
          </Link>
        </h1>
        <Link to={routes.newPost()} className=\\"rw-button rw-button-green\\">
          <div className=\\"rw-button-icon\\">+</div> New Post
        </Link>
      </header>
      <main className=\\"rw-main\\">{children}</main>
    </div>
  )
}

export default PostsLayout
"
`;

exports[`in javascript (default) mode creates a new component 1`] = `
"import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { navigate, routes } from '@redwoodjs/router'
import PostForm from 'src/components/Post/PostForm'

const CREATE_POST_MUTATION = gql\`
  mutation CreatePostMutation($input: CreatePostInput!) {
    createPost(input: $input) {
      id
    }
  }
\`

const NewPost = () => {
  const [createPost, { loading, error }] = useMutation(CREATE_POST_MUTATION, {
    onCompleted: () => {
      toast.success('Post created')
      navigate(routes.posts())
    },
    onError: (error) => {
      toast.error(error.message)
    },
  })

  const onSave = (input) => {
    createPost({ variables: { input } })
  }

  return (
    <div className=\\"rw-segment\\">
      <header className=\\"rw-segment-header\\">
        <h2 className=\\"rw-heading rw-heading-secondary\\">New Post</h2>
      </header>
      <div className=\\"rw-segment-main\\">
        <PostForm onSave={onSave} loading={loading} error={error} />
      </div>
    </div>
  )
}

export default NewPost
"
`;

exports[`in javascript (default) mode creates a new component with int foreign keys converted in onSave 1`] = `
"import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { navigate, routes } from '@redwoodjs/router'
import UserProfileForm from 'src/components/UserProfile/UserProfileForm'

const CREATE_USER_PROFILE_MUTATION = gql\`
  mutation CreateUserProfileMutation($input: CreateUserProfileInput!) {
    createUserProfile(input: $input) {
      id
    }
  }
\`

const NewUserProfile = () => {
  const [createUserProfile, { loading, error }] = useMutation(
    CREATE_USER_PROFILE_MUTATION,
    {
      onCompleted: () => {
        toast.success('UserProfile created')
        navigate(routes.userProfiles())
      },
      onError: (error) => {
        toast.error(error.message)
      },
    }
  )

  const onSave = (input) => {
    const castInput = Object.assign(input, { userId: parseInt(input.userId) })
    createUserProfile({ variables: { input: castInput } })
  }

  return (
    <div className=\\"rw-segment\\">
      <header className=\\"rw-segment-header\\">
        <h2 className=\\"rw-heading rw-heading-secondary\\">New UserProfile</h2>
      </header>
      <div className=\\"rw-segment-main\\">
        <UserProfileForm onSave={onSave} loading={loading} error={error} />
      </div>
    </div>
  )
}

export default NewUserProfile
"
`;

exports[`in javascript (default) mode creates a new page 1`] = `
"import NewPost from 'src/components/Post/NewPost'

const NewPostPage = () => {
  return <NewPost />
}

export default NewPostPage
"
`;

exports[`in javascript (default) mode creates a show cell 1`] = `
"import Post from 'src/components/Post/Post'

export const QUERY = gql\`
  query FindPostById($id: Int!) {
    post: post(id: $id) {
      id
      title
      slug
      author
      body
      image
      postedAt
      isPinned
      readTime
      rating
      upvotes
      metadata
      hugeNumber
    }
  }
\`

export const Loading = () => <div>Loading...</div>

export const Empty = () => <div>Post not found</div>

export const Failure = ({ error }) => (
  <div className=\\"rw-cell-error\\">{error.message}</div>
)

export const Success = ({ post }) => {
  return <Post post={post} />
}
"
`;

exports[`in javascript (default) mode creates a show component 1`] = `
"import humanize from 'humanize-string'

import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { Link, routes, navigate } from '@redwoodjs/router'

const DELETE_POST_MUTATION = gql\`
  mutation DeletePostMutation($id: Int!) {
    deletePost(id: $id) {
      id
    }
  }
\`

const formatEnum = (values) => {
  if (values) {
    if (Array.isArray(values)) {
      const humanizedValues = values.map((value) => humanize(value))
      return humanizedValues.join(', ')
    } else {
      return humanize(values)
    }
  }
}

const jsonDisplay = (obj) => {
  return (
    <pre>
      <code>{JSON.stringify(obj, null, 2)}</code>
    </pre>
  )
}

const timeTag = (datetime) => {
  return (
    datetime && (
      <time dateTime={datetime} title={datetime}>
        {new Date(datetime).toUTCString()}
      </time>
    )
  )
}

const checkboxInputTag = (checked) => {
  return <input type=\\"checkbox\\" checked={checked} disabled />
}

const Post = ({ post }) => {
  const [deletePost] = useMutation(DELETE_POST_MUTATION, {
    onCompleted: () => {
      toast.success('Post deleted')
      navigate(routes.posts())
    },
    onError: (error) => {
      toast.error(error.message)
    },
  })

  const onDeleteClick = (id) => {
    if (confirm('Are you sure you want to delete post ' + id + '?')) {
      deletePost({ variables: { id } })
    }
  }

  return (
    <>
      <div className=\\"rw-segment\\">
        <header className=\\"rw-segment-header\\">
          <h2 className=\\"rw-heading rw-heading-secondary\\">
            Post {post.id} Detail
          </h2>
        </header>
        <table className=\\"rw-table\\">
          <tbody>
            <tr>
              <th>Id</th>
              <td>{post.id}</td>
            </tr>
            <tr>
              <th>Title</th>
              <td>{post.title}</td>
            </tr>
            <tr>
              <th>Slug</th>
              <td>{post.slug}</td>
            </tr>
            <tr>
              <th>Author</th>
              <td>{post.author}</td>
            </tr>
            <tr>
              <th>Body</th>
              <td>{post.body}</td>
            </tr>
            <tr>
              <th>Image</th>
              <td>{post.image}</td>
            </tr>
            <tr>
              <th>Posted at</th>
              <td>{timeTag(post.postedAt)}</td>
            </tr>
            <tr>
              <th>Is pinned</th>
              <td>{checkboxInputTag(post.isPinned)}</td>
            </tr>
            <tr>
              <th>Read time</th>
              <td>{post.readTime}</td>
            </tr>
            <tr>
              <th>Rating</th>
              <td>{post.rating}</td>
            </tr>
            <tr>
              <th>Upvotes</th>
              <td>{post.upvotes}</td>
            </tr>
            <tr>
              <th>Metadata</th>
              <td>{jsonDisplay(post.metadata)}</td>
            </tr>
            <tr>
              <th>Huge number</th>
              <td>{post.hugeNumber}</td>
            </tr>
          </tbody>
        </table>
      </div>
      <nav className=\\"rw-button-group\\">
        <Link
          to={routes.editPost({ id: post.id })}
          className=\\"rw-button rw-button-blue\\"
        >
          Edit
        </Link>
        <button
          type=\\"button\\"
          className=\\"rw-button rw-button-red\\"
          onClick={() => onDeleteClick(post.id)}
        >
          Delete
        </button>
      </nav>
    </>
  )
}

export default Post
"
`;

exports[`in javascript (default) mode creates a show page 1`] = `
"import PostCell from 'src/components/Post/PostCell'

const PostPage = ({ id }) => {
  return <PostCell id={id} />
}

export default PostPage
"
`;

exports[`in javascript (default) mode creates a stylesheet 1`] = `
"/*
  normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css
*/

.rw-scaffold *,
.rw-scaffold ::after,
.rw-scaffold ::before {
  box-sizing: inherit;
}
.rw-scaffold main {
  color: #4a5568;
  display: block;
}
.rw-scaffold h1,
.rw-scaffold h2 {
  margin: 0;
}
.rw-scaffold a {
  background-color: transparent;
}
.rw-scaffold ul {
  margin: 0;
  padding: 0;
}
.rw-scaffold input {
  font-family: inherit;
  font-size: 100%;
  overflow: visible;
}
.rw-scaffold input:-ms-input-placeholder {
  color: #a0aec0;
}
.rw-scaffold input::-ms-input-placeholder {
  color: #a0aec0;
}
.rw-scaffold input::placeholder {
  color: #a0aec0;
}
.rw-scaffold table {
  border-collapse: collapse;
}

/*
  Style
*/

.rw-scaffold,
.rw-toast {
  background-color: #fff;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
}
.rw-header {
  display: flex;
  justify-content: space-between;
  padding: 1rem 2rem 1rem 2rem;
}
.rw-main {
  margin-left: 1rem;
  margin-right: 1rem;
  padding-bottom: 1rem;
}
.rw-segment {
  border-radius: 0.5rem;
  overflow: hidden;
  width: 100%;
}
.rw-segment-header {
  background-color: #e2e8f0;
  color: #4a5568;
  padding: 0.75rem 1rem;
}
.rw-segment-main {
  background-color: #f7fafc;
  padding: 1rem;
}
.rw-link {
  color: #4299e1;
  text-decoration: underline;
}
.rw-link:hover {
  color: #2b6cb0;
}
.rw-forgot-link {
  font-size: 0.75rem;
  color: #a0aec0;
  text-align: right;
  margin-top: 0.1rem;
}
.rw-forgot-link:hover {
  font-size: 0.75rem;
  color: #4299e1;
}
.rw-heading {
  font-weight: 600;
}
.rw-heading.rw-heading-primary {
  font-size: 1.25rem;
}
.rw-heading.rw-heading-secondary {
  font-size: 0.875rem;
}
.rw-heading .rw-link {
  color: #4a5568;
  text-decoration: none;
}
.rw-heading .rw-link:hover {
  color: #1a202c;
  text-decoration: underline;
}
.rw-cell-error {
  font-size: 90%;
  font-weight: 600;
}
.rw-form-wrapper {
  box-sizing: border-box;
  font-size: 0.875rem;
  margin-top: -1rem;
}
.rw-cell-error,
.rw-form-error-wrapper {
  padding: 1rem;
  background-color: #fff5f5;
  color: #c53030;
  border-width: 1px;
  border-color: #feb2b2;
  border-radius: 0.25rem;
  margin: 1rem 0;
}
.rw-form-error-title {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 600;
}
.rw-form-error-list {
  margin-top: 0.5rem;
  list-style-type: disc;
  list-style-position: inside;
}
.rw-button {
  border: none;
  color: #718096;
  cursor: pointer;
  display: flex;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 600;
  padding: 0.25rem 1rem;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 0.025em;
  border-radius: 0.25rem;
  line-height: 2;
  border: 0;
}
.rw-button:hover {
  background-color: #718096;
  color: #fff;
}
.rw-button.rw-button-small {
  font-size: 0.75rem;
  border-radius: 0.125rem;
  padding: 0.25rem 0.5rem;
  line-height: inherit;
}
.rw-button.rw-button-green {
  background-color: #48bb78;
  color: #fff;
}
.rw-button.rw-button-green:hover {
  background-color: #38a169;
  color: #fff;
}
.rw-button.rw-button-blue {
  background-color: #3182ce;
  color: #fff;
}
.rw-button.rw-button-blue:hover {
  background-color: #2b6cb0;
}
.rw-button.rw-button-red {
  background-color: #e53e3e;
  color: #fff;
}
.rw-button.rw-button-red:hover {
  background-color: #c53030;
}
.rw-button-icon {
  font-size: 1.25rem;
  line-height: 1;
  margin-right: 0.25rem;
}
.rw-button-group {
  display: flex;
  justify-content: center;
  margin: 0.75rem 0.5rem;
}
.rw-button-group .rw-button {
  margin: 0 0.25rem;
}
.rw-form-wrapper .rw-button-group {
  margin-top: 2rem;
  margin-bottom: 0;
}
.rw-label {
  display: block;
  margin-top: 1.5rem;
  color: #4a5568;
  font-weight: 600;
}
.rw-label.rw-label-error {
  color: #c53030;
}
.rw-input {
  display: block;
  margin-top: 0.5rem;
  width: 100%;
  padding: 0.5rem;
  border-width: 1px;
  border-style: solid;
  border-color: #e2e8f0;
  color: #4a5568;
  border-radius: 0.25rem;
  outline: none;
}
.rw-check-radio-item-none {
  color: #4a5568;
}
.rw-check-radio-items {
  display: flex;
  justify-items: center;
}
.rw-input[type='checkbox'] {
  display: inline;
  width: 1rem;
  margin-left: 0;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}
.rw-input[type='radio'] {
  display: inline;
  width: 1rem;
  margin-left: 0;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}
.rw-input:focus {
  border-color: #a0aec0;
}
.rw-input-error {
  border-color: #c53030;
  color: #c53030;
}

.rw-input-error:focus {
  outline: none;
  border-color: #c53030;
  box-shadow: 0 0 5px #c53030;
}

.rw-field-error {
  display: block;
  margin-top: 0.25rem;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.75rem;
  color: #c53030;
}
.rw-table-wrapper-responsive {
  overflow-x: scroll;
}
.rw-table-wrapper-responsive .rw-table {
  min-width: 48rem;
}
.rw-table {
  table-layout: auto;
  width: 100%;
  font-size: 0.875rem;
}
.rw-table th,
.rw-table td {
  padding: 0.75rem;
}
.rw-table td {
  background-color: #ffffff;
  color: #1a202c;
}
.rw-table thead tr {
  background-color: #e2e8f0;
  color: #4a5568;
}
.rw-table th {
  font-weight: 600;
  text-align: left;
}
.rw-table thead th {
  text-align: left;
}
.rw-table tbody th {
  text-align: right;
}
@media (min-width: 768px) {
  .rw-table tbody th {
    width: 20%;
  }
}
.rw-table tbody tr {
  background-color: #f7fafc;
  border-top-width: 1px;
}
.rw-table tbody tr:nth-child(even) {
  background-color: #fff;
}
.rw-table input {
  margin-left: 0;
}
.rw-table-actions {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 17px;
  padding-right: 0.25rem;
}
.rw-table-actions .rw-button {
  background-color: transparent;
}
.rw-table-actions .rw-button:hover {
  background-color: #718096;
  color: #fff;
}
.rw-table-actions .rw-button-blue {
  color: #3182ce;
}
.rw-table-actions .rw-button-blue:hover {
  background-color: #3182ce;
  color: #fff;
}
.rw-table-actions .rw-button-red {
  color: #e53e3e;
}
.rw-table-actions .rw-button-red:hover {
  background-color: #e53e3e;
  color: #fff;
}
.rw-text-center {
  text-align: center;
}
.rw-login-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 24rem;
  margin: 4rem auto;
  flex-wrap: wrap;
}
.rw-login-container .rw-form-wrapper {
  width: 100%;
}
.rw-login-link {
  margin-top: 1rem;
  color: #4a5568;
  font-size: 90%;
  text-align: center;
  flex-basis: 100%;
}
"
`;

exports[`in javascript (default) mode creates an edit cell 1`] = `undefined`;

exports[`in javascript (default) mode creates an edit component with int foreign keys converted in onSave 1`] = `
"import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { navigate, routes } from '@redwoodjs/router'

import UserProfileForm from 'src/components/UserProfile/UserProfileForm'

export const QUERY = gql\`
  query EditUserProfileById($id: Int!) {
    userProfile: userProfile(id: $id) {
      id
      username
      userId
    }
  }
\`
const UPDATE_USER_PROFILE_MUTATION = gql\`
  mutation UpdateUserProfileMutation(
    $id: Int!
    $input: UpdateUserProfileInput!
  ) {
    updateUserProfile(id: $id, input: $input) {
      id
      username
      userId
    }
  }
\`

export const Loading = () => <div>Loading...</div>

export const Failure = ({ error }) => (
  <div className=\\"rw-cell-error\\">{error.message}</div>
)

export const Success = ({ userProfile }) => {
  const [updateUserProfile, { loading, error }] = useMutation(
    UPDATE_USER_PROFILE_MUTATION,
    {
      onCompleted: () => {
        toast.success('UserProfile updated')
        navigate(routes.userProfiles())
      },
      onError: (error) => {
        toast.error(error.message)
      },
    }
  )

  const onSave = (input, id) => {
    const castInput = Object.assign(input, { userId: parseInt(input.userId) })
    updateUserProfile({ variables: { id, input: castInput } })
  }

  return (
    <div className=\\"rw-segment\\">
      <header className=\\"rw-segment-header\\">
        <h2 className=\\"rw-heading rw-heading-secondary\\">
          Edit UserProfile {userProfile.id}
        </h2>
      </header>
      <div className=\\"rw-segment-main\\">
        <UserProfileForm
          userProfile={userProfile}
          onSave={onSave}
          error={error}
          loading={loading}
        />
      </div>
    </div>
  )
}
"
`;

exports[`in javascript (default) mode creates an index cell 1`] = `
"import { Link, routes } from '@redwoodjs/router'

import Posts from 'src/components/Post/Posts'

export const QUERY = gql\`
  query FindPosts {
    posts {
      id
      title
      slug
      author
      body
      image
      postedAt
      isPinned
      readTime
      rating
      upvotes
      metadata
      hugeNumber
    }
  }
\`

export const Loading = () => <div>Loading...</div>

export const Empty = () => {
  return (
    <div className=\\"rw-text-center\\">
      {'No posts yet. '}
      <Link to={routes.newPost()} className=\\"rw-link\\">
        {'Create one?'}
      </Link>
    </div>
  )
}

export const Failure = ({ error }) => (
  <div className=\\"rw-cell-error\\">{error.message}</div>
)

export const Success = ({ posts }) => {
  return <Posts posts={posts} />
}
"
`;

exports[`in javascript (default) mode creates an index component 1`] = `
"import humanize from 'humanize-string'

import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { Link, routes } from '@redwoodjs/router'

import { QUERY } from 'src/components/Post/PostsCell'

const DELETE_POST_MUTATION = gql\`
  mutation DeletePostMutation($id: Int!) {
    deletePost(id: $id) {
      id
    }
  }
\`

const MAX_STRING_LENGTH = 150

const formatEnum = (values) => {
  if (values) {
    if (Array.isArray(values)) {
      const humanizedValues = values.map((value) => humanize(value))
      return humanizedValues.join(', ')
    } else {
      return humanize(values)
    }
  }
}

const truncate = (text) => {
  let output = text
  if (text && text.length > MAX_STRING_LENGTH) {
    output = output.substring(0, MAX_STRING_LENGTH) + '...'
  }
  return output
}

const jsonTruncate = (obj) => {
  return truncate(JSON.stringify(obj, null, 2))
}

const timeTag = (datetime) => {
  return (
    datetime && (
      <time dateTime={datetime} title={datetime}>
        {new Date(datetime).toUTCString()}
      </time>
    )
  )
}

const checkboxInputTag = (checked) => {
  return <input type=\\"checkbox\\" checked={checked} disabled />
}

const PostsList = ({ posts }) => {
  const [deletePost] = useMutation(DELETE_POST_MUTATION, {
    onCompleted: () => {
      toast.success('Post deleted')
    },
    onError: (error) => {
      toast.error(error.message)
    },
    // This refetches the query on the list page. Read more about other ways to
    // update the cache over here:
    // https://www.apollographql.com/docs/react/data/mutations/#making-all-other-cache-updates
    refetchQueries: [{ query: QUERY }],
    awaitRefetchQueries: true,
  })

  const onDeleteClick = (id) => {
    if (confirm('Are you sure you want to delete post ' + id + '?')) {
      deletePost({ variables: { id } })
    }
  }

  return (
    <div className=\\"rw-segment rw-table-wrapper-responsive\\">
      <table className=\\"rw-table\\">
        <thead>
          <tr>
            <th>Id</th>
            <th>Title</th>
            <th>Slug</th>
            <th>Author</th>
            <th>Body</th>
            <th>Image</th>
            <th>Posted at</th>
            <th>Is pinned</th>
            <th>Read time</th>
            <th>Rating</th>
            <th>Upvotes</th>
            <th>Metadata</th>
            <th>Huge number</th>
            <th>&nbsp;</th>
          </tr>
        </thead>
        <tbody>
          {posts.map((post) => (
            <tr key={post.id}>
              <td>{truncate(post.id)}</td>
              <td>{truncate(post.title)}</td>
              <td>{truncate(post.slug)}</td>
              <td>{truncate(post.author)}</td>
              <td>{truncate(post.body)}</td>
              <td>{truncate(post.image)}</td>
              <td>{timeTag(post.postedAt)}</td>
              <td>{checkboxInputTag(post.isPinned)}</td>
              <td>{truncate(post.readTime)}</td>
              <td>{truncate(post.rating)}</td>
              <td>{truncate(post.upvotes)}</td>
              <td>{jsonTruncate(post.metadata)}</td>
              <td>{truncate(post.hugeNumber)}</td>
              <td>
                <nav className=\\"rw-table-actions\\">
                  <Link
                    to={routes.post({ id: post.id })}
                    title={'Show post ' + post.id + ' detail'}
                    className=\\"rw-button rw-button-small\\"
                  >
                    Show
                  </Link>
                  <Link
                    to={routes.editPost({ id: post.id })}
                    title={'Edit post ' + post.id}
                    className=\\"rw-button rw-button-small rw-button-blue\\"
                  >
                    Edit
                  </Link>
                  <button
                    type=\\"button\\"
                    title={'Delete post ' + post.id}
                    className=\\"rw-button rw-button-small rw-button-red\\"
                    onClick={() => onDeleteClick(post.id)}
                  >
                    Delete
                  </button>
                </nav>
              </td>
            </tr>
          ))}
        </tbody>
      </table>
    </div>
  )
}

export default PostsList
"
`;

exports[`in typescript mode creates a edit page 1`] = `
"import EditPostCell from 'src/components/Post/EditPostCell'

type PostPageProps = {
  id: number
}

const EditPostPage = ({ id }: PostPageProps) => {
  return <EditPostCell id={id} />
}

export default EditPostPage
"
`;

exports[`in typescript mode creates a form component 1`] = `
"import {
  Form,
  FormError,
  FieldError,
  Label,
  TextField,
  DatetimeLocalField,
  CheckboxField,
  NumberField,
  TextAreaField,
  Submit,
} from '@redwoodjs/forms'


const formatDatetime = (value) => {
  if (value) {
    return value.replace(/:\\\\d{2}\\\\.\\\\d{3}\\\\w/, '')
  }
}


const PostForm = (props) => {
  const onSubmit = (data) => {

  
    
    
  
    
    
  
    
    
  
    
    
  
    
    
  
    
    
  
    
    
  
    
    
  
    
    
  
    
    
  
    
    
  
    
    
  
    props.onSave(data, props?.post?.id)
  }

  return (
    <div className=\\"rw-form-wrapper\\">
      <Form onSubmit={onSubmit} error={props.error}>
        <FormError
          error={props.error}
          wrapperClassName=\\"rw-form-error-wrapper\\"
          titleClassName=\\"rw-form-error-title\\"
          listClassName=\\"rw-form-error-list\\"
        />
      
        <Label
          name=\\"title\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Title
        </Label>
        
          <TextField
            name=\\"title\\"
            defaultValue={props.post?.title}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
            validation={{ required: true }}
          />
        

        <FieldError name=\\"title\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"slug\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Slug
        </Label>
        
          <TextField
            name=\\"slug\\"
            defaultValue={props.post?.slug}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
            validation={{ required: true }}
          />
        

        <FieldError name=\\"slug\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"author\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Author
        </Label>
        
          <TextField
            name=\\"author\\"
            defaultValue={props.post?.author}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
            validation={{ required: true }}
          />
        

        <FieldError name=\\"author\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"body\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Body
        </Label>
        
          <TextField
            name=\\"body\\"
            defaultValue={props.post?.body}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
            validation={{ required: true }}
          />
        

        <FieldError name=\\"body\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"image\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Image
        </Label>
        
          <TextField
            name=\\"image\\"
            defaultValue={props.post?.image}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
          />
        

        <FieldError name=\\"image\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"postedAt\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Posted at
        </Label>
        
          <DatetimeLocalField
            name=\\"postedAt\\"
            defaultValue={formatDatetime(props.post?.postedAt)}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
          />
        

        <FieldError name=\\"postedAt\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"isPinned\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Is pinned
        </Label>
        
          <CheckboxField
            name=\\"isPinned\\"
            defaultChecked={props.post?.isPinned}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
          />
        

        <FieldError name=\\"isPinned\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"readTime\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Read time
        </Label>
        
          <TextField
            name=\\"readTime\\"
            defaultValue={props.post?.readTime}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
            validation={{ valueAsNumber: true, required: true }}
          />
        

        <FieldError name=\\"readTime\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"rating\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Rating
        </Label>
        
          <TextField
            name=\\"rating\\"
            defaultValue={props.post?.rating}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
            validation={{ valueAsNumber: true }}
          />
        

        <FieldError name=\\"rating\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"upvotes\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Upvotes
        </Label>
        
          <NumberField
            name=\\"upvotes\\"
            defaultValue={props.post?.upvotes}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
            validation={{ required: true }}
          />
        

        <FieldError name=\\"upvotes\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"metadata\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Metadata
        </Label>
        
          <TextAreaField
            name=\\"metadata\\"
            defaultValue={JSON.stringify(props.post?.metadata)}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
            validation={{ valueAsJSON: true, required: true }}
          />
        

        <FieldError name=\\"metadata\\" className=\\"rw-field-error\\" />

        <Label
          name=\\"hugeNumber\\"
          className=\\"rw-label\\"
          errorClassName=\\"rw-label rw-label-error\\"
        >
          Huge number
        </Label>
        
          <TextField
            name=\\"hugeNumber\\"
            defaultValue={props.post?.hugeNumber}
            className=\\"rw-input\\"
            errorClassName=\\"rw-input rw-input-error\\"
            validation={{ required: true }}
          />
        

        <FieldError name=\\"hugeNumber\\" className=\\"rw-field-error\\" />

        <div className=\\"rw-button-group\\">
          <Submit
            disabled={props.loading}
            className=\\"rw-button rw-button-blue\\"
          >
            Save
          </Submit>
        </div>
      </Form>
    </div>
  )
}

export default PostForm
"
`;

exports[`in typescript mode creates a index page 1`] = `
"import PostsCell from 'src/components/Post/PostsCell'

const PostsPage = () => {
  return <PostsCell />
}

export default PostsPage
"
`;

exports[`in typescript mode creates a layout 1`] = `
"import { Link, routes } from '@redwoodjs/router'
import { Toaster } from '@redwoodjs/web/toast'

type PostLayoutProps = {
  children: React.ReactNode
}

const PostsLayout = ({ children }: PostLayoutProps) => {
  return (
    <div className=\\"rw-scaffold\\">
      <Toaster toastOptions={{ className: 'rw-toast', duration: 6000 }} />
      <header className=\\"rw-header\\">
        <h1 className=\\"rw-heading rw-heading-primary\\">
          <Link
            to={routes.posts()}
            className=\\"rw-link\\"
          >
            Posts
          </Link>
        </h1>
        <Link
          to={routes.newPost()}
          className=\\"rw-button rw-button-green\\"
        >
          <div className=\\"rw-button-icon\\">+</div> New Post
        </Link>
      </header>
      <main className=\\"rw-main\\">{children}</main>
    </div>
  )
}

export default PostsLayout
"
`;

exports[`in typescript mode creates a new component 1`] = `
"import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { navigate, routes } from '@redwoodjs/router'
import PostForm from 'src/components/Post/PostForm'

const CREATE_POST_MUTATION = gql\`
  mutation CreatePostMutation($input: CreatePostInput!) {
    createPost(input: $input) {
      id
    }
  }
\`

const NewPost = () => {
  const [createPost, { loading, error }] = useMutation(CREATE_POST_MUTATION, {
    onCompleted: () => {
      toast.success('Post created')
      navigate(routes.posts())
    },
    onError: (error) => {
      toast.error(error.message)
    },
  })

  const onSave = (input) => {
    createPost({ variables: { input } })
  }

  return (
    <div className=\\"rw-segment\\">
      <header className=\\"rw-segment-header\\">
        <h2 className=\\"rw-heading rw-heading-secondary\\">New Post</h2>
      </header>
      <div className=\\"rw-segment-main\\">
        <PostForm onSave={onSave} loading={loading} error={error} />
      </div>
    </div>
  )
}

export default NewPost
"
`;

exports[`in typescript mode creates a new component with int foreign keys converted in onSave 1`] = `
"import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { navigate, routes } from '@redwoodjs/router'
import UserProfileForm from 'src/components/UserProfile/UserProfileForm'

const CREATE_USER_PROFILE_MUTATION = gql\`
  mutation CreateUserProfileMutation($input: CreateUserProfileInput!) {
    createUserProfile(input: $input) {
      id
    }
  }
\`

const NewUserProfile = () => {
  const [createUserProfile, { loading, error }] = useMutation(CREATE_USER_PROFILE_MUTATION, {
    onCompleted: () => {
      toast.success('UserProfile created')
      navigate(routes.userProfiles())
    },
    onError: (error) => {
      toast.error(error.message)
    },
  })

  const onSave = (input) => {
    const castInput = Object.assign(input, { userId: parseInt(input.userId), })
    createUserProfile({ variables: { input: castInput } })
  }

  return (
    <div className=\\"rw-segment\\">
      <header className=\\"rw-segment-header\\">
        <h2 className=\\"rw-heading rw-heading-secondary\\">New UserProfile</h2>
      </header>
      <div className=\\"rw-segment-main\\">
        <UserProfileForm onSave={onSave} loading={loading} error={error} />
      </div>
    </div>
  )
}

export default NewUserProfile
"
`;

exports[`in typescript mode creates a new page 1`] = `
"import NewPost from 'src/components/Post/NewPost'

const NewPostPage = () => {
  return <NewPost />
}

export default NewPostPage
"
`;

exports[`in typescript mode creates a show cell 1`] = `
"import type { FindPostById } from 'types/graphql'
import type { CellSuccessProps, CellFailureProps } from '@redwoodjs/web'

import Post from 'src/components/Post/Post'

export const QUERY = gql\`
  query FindPostById($id: Int!) {
    post: post(id: $id) {
      id
      title
      slug
      author
      body
      image
      postedAt
      isPinned
      readTime
      rating
      upvotes
      metadata
      hugeNumber
    }
  }
\`

export const Loading = () => <div>Loading...</div>

export const Empty = () => <div>Post not found</div>

export const Failure = ({ error }: CellFailureProps) => (
  <div className=\\"rw-cell-error\\">{error.message}</div>
)

export const Success = ({ post }: CellSuccessProps<FindPostById>) => {
  return <Post post={post} />
}
"
`;

exports[`in typescript mode creates a show component 1`] = `
"import humanize from 'humanize-string'

import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { Link, routes, navigate } from '@redwoodjs/router'

const DELETE_POST_MUTATION = gql\`
  mutation DeletePostMutation($id: Int!) {
    deletePost(id: $id) {
      id
    }
  }
\`

const formatEnum = (values: string | string[] | null | undefined) => {
  if (values) {
    if (Array.isArray(values)) {
      const humanizedValues = values.map((value) => humanize(value))
      return humanizedValues.join(', ')
    } else {
      return humanize(values as string)
    }
  }
}

const jsonDisplay = (obj) => {
  return (
    <pre>
      <code>{JSON.stringify(obj, null, 2)}</code>
    </pre>
  )
}

const timeTag = (datetime) => {
  return (
    datetime && (
      <time dateTime={datetime} title={datetime}>
        {new Date(datetime).toUTCString()}
      </time>
    )
  )
}

const checkboxInputTag = (checked) => {
  return <input type=\\"checkbox\\" checked={checked} disabled />
}

const Post = ({ post }) => {
  const [deletePost] = useMutation(DELETE_POST_MUTATION, {
    onCompleted: () => {
      toast.success('Post deleted')
      navigate(routes.posts())
    },
    onError: (error) => {
      toast.error(error.message)
    },
  })

  const onDeleteClick = (id) => {
    if (confirm('Are you sure you want to delete post ' + id + '?')) {
      deletePost({ variables: { id } })
    }
  }

  return (
    <>
      <div className=\\"rw-segment\\">
        <header className=\\"rw-segment-header\\">
          <h2 className=\\"rw-heading rw-heading-secondary\\">Post {post.id} Detail</h2>
        </header>
        <table className=\\"rw-table\\">
          <tbody>
            <tr>
              <th>Id</th>
              <td>{post.id}</td>
            </tr><tr>
              <th>Title</th>
              <td>{post.title}</td>
            </tr><tr>
              <th>Slug</th>
              <td>{post.slug}</td>
            </tr><tr>
              <th>Author</th>
              <td>{post.author}</td>
            </tr><tr>
              <th>Body</th>
              <td>{post.body}</td>
            </tr><tr>
              <th>Image</th>
              <td>{post.image}</td>
            </tr><tr>
              <th>Posted at</th>
              <td>{timeTag(post.postedAt)}</td>
            </tr><tr>
              <th>Is pinned</th>
              <td>{checkboxInputTag(post.isPinned)}</td>
            </tr><tr>
              <th>Read time</th>
              <td>{post.readTime}</td>
            </tr><tr>
              <th>Rating</th>
              <td>{post.rating}</td>
            </tr><tr>
              <th>Upvotes</th>
              <td>{post.upvotes}</td>
            </tr><tr>
              <th>Metadata</th>
              <td>{jsonDisplay(post.metadata)}</td>
            </tr><tr>
              <th>Huge number</th>
              <td>{post.hugeNumber}</td>
            </tr>
          </tbody>
        </table>
      </div>
      <nav className=\\"rw-button-group\\">
        <Link
          to={routes.editPost({ id: post.id })}
          className=\\"rw-button rw-button-blue\\"
        >
          Edit
        </Link>
        <button
          type=\\"button\\"
          className=\\"rw-button rw-button-red\\"
          onClick={() => onDeleteClick(post.id)}
        >
          Delete
        </button>
      </nav>
    </>
  )
}

export default Post
"
`;

exports[`in typescript mode creates a show page 1`] = `
"import PostCell from 'src/components/Post/PostCell'

type PostPageProps = {
  id: number
}

const PostPage = ({ id }: PostPageProps) => {
  return <PostCell id={id} />
}

export default PostPage
"
`;

exports[`in typescript mode creates a stylesheet 1`] = `
"/*
  normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css
*/

.rw-scaffold *,
.rw-scaffold ::after,
.rw-scaffold ::before {
  box-sizing: inherit;
}
.rw-scaffold main {
  color: #4a5568;
  display: block;
}
.rw-scaffold h1,
.rw-scaffold h2 {
  margin: 0;
}
.rw-scaffold a {
  background-color: transparent;
}
.rw-scaffold ul {
  margin: 0;
  padding: 0;
}
.rw-scaffold input {
  font-family: inherit;
  font-size: 100%;
  overflow: visible;
}
.rw-scaffold input:-ms-input-placeholder {
  color: #a0aec0;
}
.rw-scaffold input::-ms-input-placeholder {
  color: #a0aec0;
}
.rw-scaffold input::placeholder {
  color: #a0aec0;
}
.rw-scaffold table {
  border-collapse: collapse;
}

/*
  Style
*/

.rw-scaffold,
.rw-toast {
  background-color: #fff;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
}
.rw-header {
  display: flex;
  justify-content: space-between;
  padding: 1rem 2rem 1rem 2rem;
}
.rw-main {
  margin-left: 1rem;
  margin-right: 1rem;
  padding-bottom: 1rem;
}
.rw-segment {
  border-radius: 0.5rem;
  overflow: hidden;
  width: 100%;
}
.rw-segment-header {
  background-color: #e2e8f0;
  color: #4a5568;
  padding: 0.75rem 1rem;
}
.rw-segment-main {
  background-color: #f7fafc;
  padding: 1rem;
}
.rw-link {
  color: #4299e1;
  text-decoration: underline;
}
.rw-link:hover {
  color: #2b6cb0;
}
.rw-forgot-link {
  font-size: 0.75rem;
  color: #a0aec0;
  text-align: right;
  margin-top: 0.1rem;
}
.rw-forgot-link:hover {
  font-size: 0.75rem;
  color: #4299e1;
}
.rw-heading {
  font-weight: 600;
}
.rw-heading.rw-heading-primary {
  font-size: 1.25rem;
}
.rw-heading.rw-heading-secondary {
  font-size: 0.875rem;
}
.rw-heading .rw-link {
  color: #4a5568;
  text-decoration: none;
}
.rw-heading .rw-link:hover {
  color: #1a202c;
  text-decoration: underline;
}
.rw-cell-error {
  font-size: 90%;
  font-weight: 600;
}
.rw-form-wrapper {
  box-sizing: border-box;
  font-size: 0.875rem;
  margin-top: -1rem;
}
.rw-cell-error,
.rw-form-error-wrapper {
  padding: 1rem;
  background-color: #fff5f5;
  color: #c53030;
  border-width: 1px;
  border-color: #feb2b2;
  border-radius: 0.25rem;
  margin: 1rem 0;
}
.rw-form-error-title {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 600;
}
.rw-form-error-list {
  margin-top: 0.5rem;
  list-style-type: disc;
  list-style-position: inside;
}
.rw-button {
  border: none;
  color: #718096;
  cursor: pointer;
  display: flex;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 600;
  padding: 0.25rem 1rem;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 0.025em;
  border-radius: 0.25rem;
  line-height: 2;
  border: 0;
}
.rw-button:hover {
  background-color: #718096;
  color: #fff;
}
.rw-button.rw-button-small {
  font-size: 0.75rem;
  border-radius: 0.125rem;
  padding: 0.25rem 0.5rem;
  line-height: inherit;
}
.rw-button.rw-button-green {
  background-color: #48bb78;
  color: #fff;
}
.rw-button.rw-button-green:hover {
  background-color: #38a169;
  color: #fff;
}
.rw-button.rw-button-blue {
  background-color: #3182ce;
  color: #fff;
}
.rw-button.rw-button-blue:hover {
  background-color: #2b6cb0;
}
.rw-button.rw-button-red {
  background-color: #e53e3e;
  color: #fff;
}
.rw-button.rw-button-red:hover {
  background-color: #c53030;
}
.rw-button-icon {
  font-size: 1.25rem;
  line-height: 1;
  margin-right: 0.25rem;
}
.rw-button-group {
  display: flex;
  justify-content: center;
  margin: 0.75rem 0.5rem;
}
.rw-button-group .rw-button {
  margin: 0 0.25rem;
}
.rw-form-wrapper .rw-button-group {
  margin-top: 2rem;
  margin-bottom: 0;
}
.rw-label {
  display: block;
  margin-top: 1.5rem;
  color: #4a5568;
  font-weight: 600;
}
.rw-label.rw-label-error {
  color: #c53030;
}
.rw-input {
  display: block;
  margin-top: 0.5rem;
  width: 100%;
  padding: 0.5rem;
  border-width: 1px;
  border-style: solid;
  border-color: #e2e8f0;
  color: #4a5568;
  border-radius: 0.25rem;
  outline: none;
}
.rw-check-radio-item-none {
  color: #4a5568;
}
.rw-check-radio-items {
  display: flex;
  justify-items: center;
}
.rw-input[type='checkbox'] {
  display: inline;
  width: 1rem;
  margin-left: 0;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}
.rw-input[type='radio'] {
  display: inline;
  width: 1rem;
  margin-left: 0;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}
.rw-input:focus {
  border-color: #a0aec0;
}
.rw-input-error {
  border-color: #c53030;
  color: #c53030;
}

.rw-input-error:focus {
  outline: none;
  border-color: #c53030;
  box-shadow: 0 0 5px #c53030;
}

.rw-field-error {
  display: block;
  margin-top: 0.25rem;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.75rem;
  color: #c53030;
}
.rw-table-wrapper-responsive {
  overflow-x: scroll;
}
.rw-table-wrapper-responsive .rw-table {
  min-width: 48rem;
}
.rw-table {
  table-layout: auto;
  width: 100%;
  font-size: 0.875rem;
}
.rw-table th,
.rw-table td {
  padding: 0.75rem;
}
.rw-table td {
  background-color: #ffffff;
  color: #1a202c;
}
.rw-table thead tr {
  background-color: #e2e8f0;
  color: #4a5568;
}
.rw-table th {
  font-weight: 600;
  text-align: left;
}
.rw-table thead th {
  text-align: left;
}
.rw-table tbody th {
  text-align: right;
}
@media (min-width: 768px) {
  .rw-table tbody th {
    width: 20%;
  }
}
.rw-table tbody tr {
  background-color: #f7fafc;
  border-top-width: 1px;
}
.rw-table tbody tr:nth-child(even) {
  background-color: #fff;
}
.rw-table input {
  margin-left: 0;
}
.rw-table-actions {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 17px;
  padding-right: 0.25rem;
}
.rw-table-actions .rw-button {
  background-color: transparent;
}
.rw-table-actions .rw-button:hover {
  background-color: #718096;
  color: #fff;
}
.rw-table-actions .rw-button-blue {
  color: #3182ce;
}
.rw-table-actions .rw-button-blue:hover {
  background-color: #3182ce;
  color: #fff;
}
.rw-table-actions .rw-button-red {
  color: #e53e3e;
}
.rw-table-actions .rw-button-red:hover {
  background-color: #e53e3e;
  color: #fff;
}
.rw-text-center {
  text-align: center;
}
.rw-login-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 24rem;
  margin: 4rem auto;
  flex-wrap: wrap;
}
.rw-login-container .rw-form-wrapper {
  width: 100%;
}
.rw-login-link {
  margin-top: 1rem;
  color: #4a5568;
  font-size: 90%;
  text-align: center;
  flex-basis: 100%;
}
"
`;

exports[`in typescript mode creates an edit cell 1`] = `
"import type { EditPostById } from 'types/graphql'

import type { CellSuccessProps, CellFailureProps } from '@redwoodjs/web'
import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { navigate, routes } from '@redwoodjs/router'

import PostForm from 'src/components/Post/PostForm'

export const QUERY = gql\`
  query EditPostById($id: Int!) {
    post: post(id: $id) {
      id
      title
      slug
      author
      body
      image
      postedAt
      isPinned
      readTime
      rating
      upvotes
      metadata
      hugeNumber
    }
  }
\`
const UPDATE_POST_MUTATION = gql\`
  mutation UpdatePostMutation($id: Int!, $input: UpdatePostInput!) {
    updatePost(id: $id, input: $input) {
      id
      title
      slug
      author
      body
      image
      postedAt
      isPinned
      readTime
      rating
      upvotes
      metadata
      hugeNumber
    }
  }
\`

export const Loading = () => <div>Loading...</div>

export const Failure = ({ error }: CellFailureProps) => (
  <div className=\\"rw-cell-error\\">{error.message}</div>
)

export const Success = ({ post }: CellSuccessProps<EditPostById>) => {
  const [updatePost, { loading, error }] = useMutation(UPDATE_POST_MUTATION, {
    onCompleted: () => {
      toast.success('Post updated')
      navigate(routes.posts())
    },
    onError: (error) => {
      toast.error(error.message)
    },
  })

  const onSave = (input, id) => {
    updatePost({ variables: { id, input } })
  }

  return (
    <div className=\\"rw-segment\\">
      <header className=\\"rw-segment-header\\">
        <h2 className=\\"rw-heading rw-heading-secondary\\">Edit Post {post.id}</h2>
      </header>
      <div className=\\"rw-segment-main\\">
        <PostForm post={post} onSave={onSave} error={error} loading={loading} />
      </div>
    </div>
  )
}
"
`;

exports[`in typescript mode creates an edit component with int foreign keys converted in onSave 1`] = `
"import type { EditUserProfileById } from 'types/graphql'

import type { CellSuccessProps, CellFailureProps } from '@redwoodjs/web'
import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { navigate, routes } from '@redwoodjs/router'

import UserProfileForm from 'src/components/UserProfile/UserProfileForm'

export const QUERY = gql\`
  query EditUserProfileById($id: Int!) {
    userProfile: userProfile(id: $id) {
      id
      username
      userId
    }
  }
\`
const UPDATE_USER_PROFILE_MUTATION = gql\`
  mutation UpdateUserProfileMutation($id: Int!, $input: UpdateUserProfileInput!) {
    updateUserProfile(id: $id, input: $input) {
      id
      username
      userId
    }
  }
\`

export const Loading = () => <div>Loading...</div>

export const Failure = ({ error }: CellFailureProps) => (
  <div className=\\"rw-cell-error\\">{error.message}</div>
)

export const Success = ({ userProfile }: CellSuccessProps<EditUserProfileById>) => {
  const [updateUserProfile, { loading, error }] = useMutation(UPDATE_USER_PROFILE_MUTATION, {
    onCompleted: () => {
      toast.success('UserProfile updated')
      navigate(routes.userProfiles())
    },
    onError: (error) => {
      toast.error(error.message)
    },
  })

  const onSave = (input, id) => {
    const castInput = Object.assign(input, { userId: parseInt(input.userId), })
    updateUserProfile({ variables: { id, input: castInput } })
  }

  return (
    <div className=\\"rw-segment\\">
      <header className=\\"rw-segment-header\\">
        <h2 className=\\"rw-heading rw-heading-secondary\\">Edit UserProfile {userProfile.id}</h2>
      </header>
      <div className=\\"rw-segment-main\\">
        <UserProfileForm userProfile={userProfile} onSave={onSave} error={error} loading={loading} />
      </div>
    </div>
  )
}
"
`;

exports[`in typescript mode creates an index cell 1`] = `
"import type { FindPosts } from 'types/graphql'
import type { CellSuccessProps, CellFailureProps } from '@redwoodjs/web'

import { Link, routes } from '@redwoodjs/router'

import Posts from 'src/components/Post/Posts'

export const QUERY = gql\`
  query FindPosts {
    posts {
      id
      title
      slug
      author
      body
      image
      postedAt
      isPinned
      readTime
      rating
      upvotes
      metadata
      hugeNumber
    }
  }
\`

export const Loading = () => <div>Loading...</div>

export const Empty = () => {
  return (
    <div className=\\"rw-text-center\\">
      {'No posts yet. '}
      <Link
        to={routes.newPost()}
        className=\\"rw-link\\"
      >
        {'Create one?'}
      </Link>
    </div>
  )
}

export const Failure = ({ error }: CellFailureProps) => (
  <div className=\\"rw-cell-error\\">{error.message}</div>
)

export const Success = ({ posts }: CellSuccessProps<FindPosts>) => {
  return <Posts posts={posts} />
}
"
`;

exports[`in typescript mode creates an index component 1`] = `
"import humanize from 'humanize-string'

import { useMutation } from '@redwoodjs/web'
import { toast } from '@redwoodjs/web/toast'
import { Link, routes } from '@redwoodjs/router'

import { QUERY } from 'src/components/Post/PostsCell'

const DELETE_POST_MUTATION = gql\`
  mutation DeletePostMutation($id: Int!) {
    deletePost(id: $id) {
      id
    }
  }
\`

const MAX_STRING_LENGTH = 150

const formatEnum = (values: string | string[] | null | undefined) => {
  if (values) {
    if (Array.isArray(values)) {
      const humanizedValues = values.map((value) => humanize(value))
      return humanizedValues.join(', ')
    } else {
      return humanize(values as string)
    }
  }
}

const truncate = (text) => {
  let output = text
  if (text && text.length > MAX_STRING_LENGTH) {
    output = output.substring(0, MAX_STRING_LENGTH) + '...'
  }
  return output
}

const jsonTruncate = (obj) => {
  return truncate(JSON.stringify(obj, null, 2))
}

const timeTag = (datetime) => {
  return (
    datetime && (
      <time dateTime={datetime} title={datetime}>
        {new Date(datetime).toUTCString()}
      </time>
    )
  )
}

const checkboxInputTag = (checked) => {
  return <input type=\\"checkbox\\" checked={checked} disabled />
}

const PostsList = ({ posts }) => {
  const [deletePost] = useMutation(DELETE_POST_MUTATION, {
    onCompleted: () => {
      toast.success('Post deleted')
    },
    onError: (error) => {
      toast.error(error.message)
    },
    // This refetches the query on the list page. Read more about other ways to
    // update the cache over here:
    // https://www.apollographql.com/docs/react/data/mutations/#making-all-other-cache-updates
    refetchQueries: [{ query: QUERY }],
    awaitRefetchQueries: true,
  })

  const onDeleteClick = (id) => {
    if (confirm('Are you sure you want to delete post ' + id + '?')) {
      deletePost({ variables: { id } })
    }
  }

  return (
    <div className=\\"rw-segment rw-table-wrapper-responsive\\">
      <table className=\\"rw-table\\">
        <thead>
          <tr>
            <th>Id</th>
            <th>Title</th>
            <th>Slug</th>
            <th>Author</th>
            <th>Body</th>
            <th>Image</th>
            <th>Posted at</th>
            <th>Is pinned</th>
            <th>Read time</th>
            <th>Rating</th>
            <th>Upvotes</th>
            <th>Metadata</th>
            <th>Huge number</th>
            <th>&nbsp;</th>
          </tr>
        </thead>
        <tbody>
          {posts.map((post) => (
            <tr key={post.id}>
              <td>{truncate(post.id)}</td>
              <td>{truncate(post.title)}</td>
              <td>{truncate(post.slug)}</td>
              <td>{truncate(post.author)}</td>
              <td>{truncate(post.body)}</td>
              <td>{truncate(post.image)}</td>
              <td>{timeTag(post.postedAt)}</td>
              <td>{checkboxInputTag(post.isPinned)}</td>
              <td>{truncate(post.readTime)}</td>
              <td>{truncate(post.rating)}</td>
              <td>{truncate(post.upvotes)}</td>
              <td>{jsonTruncate(post.metadata)}</td>
              <td>{truncate(post.hugeNumber)}</td>
              <td>
                <nav className=\\"rw-table-actions\\">
                  <Link
                    to={routes.post({ id: post.id })}
                    title={'Show post ' + post.id + ' detail'}
                    className=\\"rw-button rw-button-small\\"
                  >
                    Show
                  </Link>
                  <Link
                    to={routes.editPost({ id: post.id })}
                    title={'Edit post ' + post.id}
                    className=\\"rw-button rw-button-small rw-button-blue\\"
                  >
                    Edit
                  </Link>
                  <button
                    type=\\"button\\"
                    title={'Delete post ' + post.id}
                    className=\\"rw-button rw-button-small rw-button-red\\"
                    onClick={() => onDeleteClick(post.id)}
                  >
                    Delete
                  </button>
                </nav>
              </td>
            </tr>
          ))}
        </tbody>
      </table>
    </div>
  )
}

export default PostsList
"
`;

exports[`tailwind flag set to \`false\` generates a scaffold.css with raw CSS 1`] = `
"/*
  normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css
*/

.rw-scaffold *,
.rw-scaffold ::after,
.rw-scaffold ::before {
  box-sizing: inherit;
}
.rw-scaffold main {
  color: #4a5568;
  display: block;
}
.rw-scaffold h1,
.rw-scaffold h2 {
  margin: 0;
}
.rw-scaffold a {
  background-color: transparent;
}
.rw-scaffold ul {
  margin: 0;
  padding: 0;
}
.rw-scaffold input {
  font-family: inherit;
  font-size: 100%;
  overflow: visible;
}
.rw-scaffold input:-ms-input-placeholder {
  color: #a0aec0;
}
.rw-scaffold input::-ms-input-placeholder {
  color: #a0aec0;
}
.rw-scaffold input::placeholder {
  color: #a0aec0;
}
.rw-scaffold table {
  border-collapse: collapse;
}

/*
  Style
*/

.rw-scaffold,
.rw-toast {
  background-color: #fff;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
}
.rw-header {
  display: flex;
  justify-content: space-between;
  padding: 1rem 2rem 1rem 2rem;
}
.rw-main {
  margin-left: 1rem;
  margin-right: 1rem;
  padding-bottom: 1rem;
}
.rw-segment {
  border-radius: 0.5rem;
  overflow: hidden;
  width: 100%;
}
.rw-segment-header {
  background-color: #e2e8f0;
  color: #4a5568;
  padding: 0.75rem 1rem;
}
.rw-segment-main {
  background-color: #f7fafc;
  padding: 1rem;
}
.rw-link {
  color: #4299e1;
  text-decoration: underline;
}
.rw-link:hover {
  color: #2b6cb0;
}
.rw-forgot-link {
  font-size: 0.75rem;
  color: #a0aec0;
  text-align: right;
  margin-top: 0.1rem;
}
.rw-forgot-link:hover {
  font-size: 0.75rem;
  color: #4299e1;
}
.rw-heading {
  font-weight: 600;
}
.rw-heading.rw-heading-primary {
  font-size: 1.25rem;
}
.rw-heading.rw-heading-secondary {
  font-size: 0.875rem;
}
.rw-heading .rw-link {
  color: #4a5568;
  text-decoration: none;
}
.rw-heading .rw-link:hover {
  color: #1a202c;
  text-decoration: underline;
}
.rw-cell-error {
  font-size: 90%;
  font-weight: 600;
}
.rw-form-wrapper {
  box-sizing: border-box;
  font-size: 0.875rem;
  margin-top: -1rem;
}
.rw-cell-error,
.rw-form-error-wrapper {
  padding: 1rem;
  background-color: #fff5f5;
  color: #c53030;
  border-width: 1px;
  border-color: #feb2b2;
  border-radius: 0.25rem;
  margin: 1rem 0;
}
.rw-form-error-title {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 600;
}
.rw-form-error-list {
  margin-top: 0.5rem;
  list-style-type: disc;
  list-style-position: inside;
}
.rw-button {
  border: none;
  color: #718096;
  cursor: pointer;
  display: flex;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 600;
  padding: 0.25rem 1rem;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 0.025em;
  border-radius: 0.25rem;
  line-height: 2;
  border: 0;
}
.rw-button:hover {
  background-color: #718096;
  color: #fff;
}
.rw-button.rw-button-small {
  font-size: 0.75rem;
  border-radius: 0.125rem;
  padding: 0.25rem 0.5rem;
  line-height: inherit;
}
.rw-button.rw-button-green {
  background-color: #48bb78;
  color: #fff;
}
.rw-button.rw-button-green:hover {
  background-color: #38a169;
  color: #fff;
}
.rw-button.rw-button-blue {
  background-color: #3182ce;
  color: #fff;
}
.rw-button.rw-button-blue:hover {
  background-color: #2b6cb0;
}
.rw-button.rw-button-red {
  background-color: #e53e3e;
  color: #fff;
}
.rw-button.rw-button-red:hover {
  background-color: #c53030;
}
.rw-button-icon {
  font-size: 1.25rem;
  line-height: 1;
  margin-right: 0.25rem;
}
.rw-button-group {
  display: flex;
  justify-content: center;
  margin: 0.75rem 0.5rem;
}
.rw-button-group .rw-button {
  margin: 0 0.25rem;
}
.rw-form-wrapper .rw-button-group {
  margin-top: 2rem;
  margin-bottom: 0;
}
.rw-label {
  display: block;
  margin-top: 1.5rem;
  color: #4a5568;
  font-weight: 600;
}
.rw-label.rw-label-error {
  color: #c53030;
}
.rw-input {
  display: block;
  margin-top: 0.5rem;
  width: 100%;
  padding: 0.5rem;
  border-width: 1px;
  border-style: solid;
  border-color: #e2e8f0;
  color: #4a5568;
  border-radius: 0.25rem;
  outline: none;
}
.rw-check-radio-item-none {
  color: #4a5568;
}
.rw-check-radio-items {
  display: flex;
  justify-items: center;
}
.rw-input[type='checkbox'] {
  display: inline;
  width: 1rem;
  margin-left: 0;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}
.rw-input[type='radio'] {
  display: inline;
  width: 1rem;
  margin-left: 0;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}
.rw-input:focus {
  border-color: #a0aec0;
}
.rw-input-error {
  border-color: #c53030;
  color: #c53030;
}

.rw-input-error:focus {
  outline: none;
  border-color: #c53030;
  box-shadow: 0 0 5px #c53030;
}

.rw-field-error {
  display: block;
  margin-top: 0.25rem;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.75rem;
  color: #c53030;
}
.rw-table-wrapper-responsive {
  overflow-x: scroll;
}
.rw-table-wrapper-responsive .rw-table {
  min-width: 48rem;
}
.rw-table {
  table-layout: auto;
  width: 100%;
  font-size: 0.875rem;
}
.rw-table th,
.rw-table td {
  padding: 0.75rem;
}
.rw-table td {
  background-color: #ffffff;
  color: #1a202c;
}
.rw-table thead tr {
  background-color: #e2e8f0;
  color: #4a5568;
}
.rw-table th {
  font-weight: 600;
  text-align: left;
}
.rw-table thead th {
  text-align: left;
}
.rw-table tbody th {
  text-align: right;
}
@media (min-width: 768px) {
  .rw-table tbody th {
    width: 20%;
  }
}
.rw-table tbody tr {
  background-color: #f7fafc;
  border-top-width: 1px;
}
.rw-table tbody tr:nth-child(even) {
  background-color: #fff;
}
.rw-table input {
  margin-left: 0;
}
.rw-table-actions {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 17px;
  padding-right: 0.25rem;
}
.rw-table-actions .rw-button {
  background-color: transparent;
}
.rw-table-actions .rw-button:hover {
  background-color: #718096;
  color: #fff;
}
.rw-table-actions .rw-button-blue {
  color: #3182ce;
}
.rw-table-actions .rw-button-blue:hover {
  background-color: #3182ce;
  color: #fff;
}
.rw-table-actions .rw-button-red {
  color: #e53e3e;
}
.rw-table-actions .rw-button-red:hover {
  background-color: #e53e3e;
  color: #fff;
}
.rw-text-center {
  text-align: center;
}
.rw-login-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 24rem;
  margin: 4rem auto;
  flex-wrap: wrap;
}
.rw-login-container .rw-form-wrapper {
  width: 100%;
}
.rw-login-link {
  margin-top: 1rem;
  color: #4a5568;
  font-size: 90%;
  text-align: center;
  flex-basis: 100%;
}
"
`;

exports[`tailwind flag set to \`true\` generates a scaffold.css with Tailwind components 1`] = `
".rw-scaffold {
  @apply bg-white text-gray-600;
}
.rw-scaffold h1,
.rw-scaffold h2 {
  @apply m-0;
}
.rw-scaffold a {
  @apply bg-transparent;
}
.rw-scaffold ul {
  @apply m-0 p-0;
}
.rw-scaffold input:-ms-input-placeholder {
  @apply text-gray-500;
}
.rw-scaffold input::-ms-input-placeholder {
  @apply text-gray-500;
}
.rw-scaffold input::placeholder {
  @apply text-gray-500;
}
.rw-header {
  @apply flex justify-between py-4 px-8;
}
.rw-main {
  @apply mx-4 pb-4;
}
.rw-segment {
  @apply rounded-lg overflow-hidden w-full;
}
.rw-segment-header {
  @apply bg-gray-200 text-gray-700 py-3 px-4;
}
.rw-segment-main {
  @apply bg-gray-100 p-4;
}
.rw-link {
  @apply text-blue-400 underline;
}
.rw-link:hover {
  @apply text-blue-500;
}
.rw-forgot-link {
  @apply text-xs text-gray-400 text-right mt-1 underline;
}
.rw-forgot-link:hover {
  @apply text-blue-500;
}
.rw-heading {
  @apply font-semibold;
}
.rw-heading.rw-heading-primary {
  @apply text-xl;
}
.rw-heading.rw-heading-secondary {
  @apply text-sm;
}
.rw-heading .rw-link {
  @apply text-gray-600 no-underline;
}
.rw-heading .rw-link:hover {
  @apply text-gray-900 underline;
}
.rw-cell-error {
  @apply text-sm font-semibold;
}
.rw-form-wrapper {
  @apply text-sm -mt-4;
}
.rw-cell-error,
.rw-form-error-wrapper {
  @apply p-4 bg-red-50 text-red-600 border border-red-100 rounded my-4;
}
.rw-form-error-title {
  @apply m-0 font-semibold;
}
.rw-form-error-list {
  @apply mt-2 list-disc list-inside;
}
.rw-button {
  @apply flex justify-center py-1 px-4 border-0 rounded bg-gray-200 text-gray-500 text-xs font-semibold uppercase tracking-wide leading-loose no-underline cursor-pointer transition duration-100;
}
.rw-button:hover {
  @apply bg-gray-500 text-white;
}
.rw-button.rw-button-small {
  @apply text-xs rounded-sm py-1 px-2;
}
.rw-button.rw-button-green {
  @apply bg-green-500 text-white;
}
.rw-button.rw-button-green:hover {
  @apply bg-green-700;
}
.rw-button.rw-button-blue {
  @apply bg-blue-500 text-white;
}
.rw-button.rw-button-blue:hover {
  @apply bg-blue-700;
}
.rw-button.rw-button-red {
  @apply bg-red-500 text-white;
}
.rw-button.rw-button-red:hover {
  @apply bg-red-700 text-white;
}
.rw-button-icon {
  @apply text-xl leading-5 mr-1;
}
.rw-button-group {
  @apply flex justify-center my-3 mx-2;
}
.rw-button-group .rw-button {
  @apply mx-1;
}
.rw-form-wrapper .rw-button-group {
  @apply mt-8;
}
.rw-label {
  @apply block mt-6 text-gray-600 font-semibold;
}
.rw-label.rw-label-error {
  @apply text-red-600;
}
.rw-input {
  @apply block mt-2 w-full p-2 bg-white border border-gray-200 rounded outline-none;
}
.rw-check-radio-items {
  @apply flex justify-items-center;
}
.rw-check-radio-item-none {
  @apply text-gray-600;
}
.rw-input[type='checkbox'],
.rw-input[type='radio'] {
  @apply inline w-4 ml-0 mr-1 mt-1;
}
.rw-input:focus {
  @apply border-gray-400;
}
.rw-input-error {
  @apply border-red-600 text-red-600;
}
.rw-input-error:focus {
  @apply border-red-600 outline-none;
  box-shadow: 0 0 5px #c53030;
}
.rw-field-error {
  @apply block mt-1 font-semibold text-xs text-red-600 uppercase;
}
.rw-table-wrapper-responsive {
  @apply overflow-x-scroll;
}
.rw-table-wrapper-responsive .rw-table {
  min-width: 48rem;
}
.rw-table {
  @apply w-full text-sm;
}
.rw-table th,
.rw-table td {
  @apply p-3;
}
.rw-table td {
  @apply bg-white text-gray-900;
}
.rw-table thead tr {
  @apply bg-gray-200 text-gray-600;
}
.rw-table th {
  @apply font-semibold text-left;
}
.rw-table thead th {
  @apply text-left;
}
.rw-table tbody th {
  @apply text-right;
}
@media (min-width: 768px) {
  .rw-table tbody th {
    @apply w-1/5;
  }
}
.rw-table tbody tr {
  @apply bg-gray-50 border-t border-gray-200;
}
.rw-table input {
  @apply ml-0;
}
.rw-table-actions {
  @apply flex justify-end items-center h-4 pr-1;
}
.rw-table-actions .rw-button {
  @apply bg-transparent;
}
.rw-table-actions .rw-button:hover {
  @apply bg-gray-500 text-white;
}
.rw-table-actions .rw-button-blue {
  @apply text-blue-500;
}
.rw-table-actions .rw-button-blue:hover {
  @apply bg-blue-500 text-white;
}
.rw-table-actions .rw-button-red {
  @apply text-red-600;
}
.rw-table-actions .rw-button-red:hover {
  @apply bg-red-600 text-white;
}
.rw-text-center {
  @apply text-center;
}
.rw-login-container {
  @apply flex items-center justify-center flex-wrap mx-auto w-96 my-16;
}
.rw-login-container .rw-form-wrapper {
  @apply w-full;
}
.rw-login-link {
  @apply mt-4 text-gray-600 text-sm text-center w-full;
}
"
`;
